...
    </string-array>

    <string name="app_name">Cooking Master</string>
    <string name="title_activity_login" tools:keep="@string/title_activity_login">Sign in</string>

    <!-- Buttons, labels, etc-->
    <string name="recipe_book">RECIPE BOOK</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="main">Main</string>
    <string name="recipes">Recipes</string>
    <string name="search_recipes">SEARCH RECIPES</string>
    <string name="max_time">Max Time:</string>
    <string name="contains">Contains:</string>
    <string name="allergens">Allergens</string>
    <string name="none">None</string>
    <string name="ingredient">Ingredient</string>
    <string name="time">Time:</string>
    <string name="mins">Mins</string>
    <string name="recipe_name_label">Recipe Name:</string>
    <string name="set">Set</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="no_allergens">No Allergens</string>
    <string name="allergens_label">Allergens:</string>
    <string name="cancel">Cancel</string>
    <string name="previous_recipe">Previous Recipe</string>
    <string name="next_recipe">Next Recipe</string>
    <string name="spices">Spices</string>
    <string name="shopping_list">Shopping List</string>
...
    <string name="clear_list">Clear List</string>
    <string name="buy">Buy</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="time_label">time:</string>
    <string name="instructions">Instructions</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cook">Cook</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="scale">Scale</string>
    <string name="timer">Timer</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="pantry">Pantry</string>
    <string name="app_logo">App Logo</string>
    <string name="default_recipe_name">Chicken Galina</string>
...
