<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_recipes"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:text="@string/max_time"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/searchRecipesDialog_edt_max_time"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/searchRecipesDialog_edt_max_time"
        android:layout_width="77dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        android:autofillHints="maximum time" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:text="@string/contains"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/searchRecipesDialog_txt_allergens"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/allergens"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/searchRecipesDialog_txt_allergens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/none"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <Button
        android:id="@+id/searchRecipesDialog_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchRecipesDialog_edt_add_ingredient_3" />

    <EditText
        android:id="@+id/searchRecipesDialog_edt_add_ingredient_3"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ingredient"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/searchRecipesDialog_edt_add_ingredient_2"
        app:layout_constraintTop_toBottomOf="@+id/searchRecipesDialog_edt_add_ingredient_2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/searchRecipesDialog_edt_add_ingredient_2"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ingredient"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/searchRecipesDialog_edt_add_ingredient_1"
        app:layout_constraintTop_toBottomOf="@+id/searchRecipesDialog_edt_add_ingredient_1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/searchRecipesDialog_edt_add_ingredient_1"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/ingredient"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>